comment the comments

--- a/roles/streama/templates/application.j2
+++ b/roles/streama/templates/application.j2
@@ -7,7 +7,7 @@ environments:
             #username: root
             #password:
             
-            For mysql database
+            #For mysql database
             driverClassName: 'com.mysql.jdbc.Driver'
             url: jdbc:mysql://localhost/streama
             username: streama
