--- a/roles/streama/templates/application.j2
+++ b/roles/streama/templates/application.j2
@@ -14,3 +14,6 @@ environments:
             password: {{ db_user_pass }}
         server:
             port: 8080
+        grails:
+            assets:
+                url: {{ nginx_streama_full_url }}assets/
