--- a/roles/ansible-nginx-revproxy/templates/reverseproxy.conf.j2
+++ b/roles/ansible-nginx-revproxy/templates/reverseproxy.conf.j2
@@ -31,12 +31,14 @@ server {
       gzip off;
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Frame-Options SAMEORIGIN;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Port $server_port;
+      proxy_http_version 1.1;
+      proxy_set_header Connection $http_connection;
       proxy_pass http://{{ item.key }}_backend;
 {% if item.value.auth is defined %}
       auth_basic "Restricted Content";
