--- a/roles/ansible-nginx-revproxy/templates/reverseproxy_ssl.conf.j2
+++ b/roles/ansible-nginx-revproxy/templates/reverseproxy_ssl.conf.j2
@@ -93,12 +93,15 @@ server {
       proxy_set_header X-Forwarded-Ssl on;
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
       proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_set_header Host $http_host;
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-Frame-Options SAMEORIGIN;
+      proxy_set_header X-Frame-Options SAMEORIGIN; 
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Port $server_port;
+      proxy_http_version 1.1;
+      proxy_set_header Connection $http_connection;
+      rewrite ^{{ item.value.nginx_location }}(.*)$ /$1 break;
       proxy_pass {{ item.value.backend_protocol | default('http') }}://{{ item.key }}_backend;
 {% if item.value.auth is defined %}
       auth_basic "Restricted Content";
