--- a/roles/ansible-nginx-revproxy/templates/reverseproxy.conf.j2
+++ b/roles/ansible-nginx-revproxy/templates/reverseproxy.conf.j2
@@ -27,7 +27,7 @@ server {
    listen    [::]:{{ item.value.listen | default(80) }};
    server_name    {{ item.value.domains | join(' ') }};
 
-   location {{ item.value.nginx_location }} {
+   location / {
       gzip off;
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
       proxy_set_header Upgrade $http_upgrade;
