--- a/roles/ansible-nginx-revproxy/templates/reverseproxy_ssl.conf.j2
+++ b/roles/ansible-nginx-revproxy/templates/reverseproxy_ssl.conf.j2
@@ -88,7 +88,7 @@ server {
       alias /var/www/{{ item.key }}/.well-known/acme-challenge;
    }
 
-   location {{ item.value.nginx_location }} {
+   location / {
       gzip off;
       proxy_set_header X-Forwarded-Ssl on;
       client_max_body_size {{ item.value.client_max_body_size | default('50M') }};
@@ -101,7 +101,6 @@ server {
       proxy_set_header X-Forwarded-Port $server_port;
       proxy_http_version 1.1;
       proxy_set_header Connection $http_connection;
-      rewrite ^{{ item.value.nginx_location }}(.*)$ /$1 break;
       proxy_pass {{ item.value.backend_protocol | default('http') }}://{{ item.key }}_backend;
 {% if item.value.auth is defined %}
       auth_basic "Restricted Content";
